# SCPA_Project

./: CMakeLists.txt  README.md  analyze_results.py  build_and_run.sh  main.c  main.cpp  run_all_tests.sh
CUDA/include/: cuda_hll_spmv.h  cuda_spmv.h
CUDA/src/: cuda_hll_spmv.cu  cuda_spmv.cu
csv_results/: cuda_csr_perf.csv  cuda_hll_perf.csv  openmp_csr_perf.csv  openmp_hll_perf.csv
include/: csr_utils.h  hll_utils.h  mm_reader.h  mpi_spmv.h  openmp_spmv.h  serial.h
server_results/: master_execution_log.txt  results_csr_cuda.txt  results_csr_openmp.txt  results_csr_serial.txt  results_hll_cuda16.txt  results_hll_cuda32.txt  results_hll_cuda64.txt  results_hll_openmp16.txt  results_hll_openmp32.txt  results_hll_openmp64.txt
src/: csr_utils.c  hll_utils.c  mm_reader.c  mpi_spmv.c  openmp_hll_spmv.c  openmp_spmv.c  serial.c  serial_hll_spmv.c
